@@ -83,6 +83,9 @@
     <site module="pwlib"
           location="http://www.ekiga.org/admin/downloads/latest/sources/sources/"
           />
+    <site module="gtksourceview-1.0"
+          location="http://download.gnome.org/sources/gtksourceview"
+          />
   </locations>
   <rename>
     <name old="Render"               new="render"/>
@@ -214,6 +217,7 @@
     <package name="gst-plugins-good"        set="desktop"/>
     <package name="gtk-engines"             set="desktop"/>
     <package name="gtksourceview"           set="desktop"/>
+    <package name="gtksourceview-1.0"       set="desktop"   limit="1.9"  module="gtksourceview" />
     <package name="gucharmap"               set="desktop"/>
     <package name="libgail-gnome"           set="desktop"/>
     <package name="gtkhtml"                 set="desktop"/>
